# rust-bangumi

./: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  .tmuxp.yaml  BROADCAST_MECHANISM_TEST_GUIDE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.cli  Dockerfile.core  Dockerfile.downloader-pikpak  Dockerfile.downloader-qbittorrent  Dockerfile.fetcher-mikanani  Dockerfile.metadata  Dockerfile.viewer-jellyfin  Makefile  PHASE9_IMPLEMENTATION.md  PLAN.md  PROGRESS.md  README.md  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yml  test_rss.rs
cli/: Cargo.toml  README.md
cli/src/: client.rs  commands.rs  main.rs  models.rs  output.rs  tests.rs
cli/src/commands/: anime.rs  conflict.rs  download.rs  filter.rs  mod.rs  parser.rs  qb_config.rs  raw_item.rs  series.rs  status.rs  subscription.rs  subtitle_group.rs
core-service/: Cargo.toml  README.md
core-service/migrations/2026-01-21-075956-0000_create_seasons/: up.sql
core-service/migrations/2026-01-21-080144-0000_create_animes/: down.sql  up.sql
core-service/migrations/2026-01-21-080327-0000_create_anime_series/: down.sql  up.sql
core-service/migrations/2026-01-21-080631-0000_create_subtitle_groups/: down.sql  up.sql
core-service/migrations/2026-01-21-081123-0000_create_anime_links/: down.sql  up.sql
core-service/migrations/2026-01-21-081336-0000_create_filter_rules/: down.sql  up.sql
core-service/migrations/2026-01-21-081813-0000_create_downloads/: up.sql
core-service/migrations/2026-01-21-082023-0000_create_cron_logs/: down.sql  up.sql
core-service/migrations/2026-01-22-000001_create_fetcher_and_subscription_tables/: down.sql  up.sql
core-service/migrations/2026-01-23-000000-initial_schema/: down.sql  up.sql
core-service/migrations/2026-01-26-000001-subscription-system-redesign/: down.sql  up.sql
core-service/migrations/2026-01-27-000002-add-fetcher-base-url/: down.sql  up.sql
core-service/migrations/2026-01-27-000003-add-service-modules-tables/: down.sql  up.sql
core-service/migrations/2026-01-27-000004-consolidate-service-modules/: down.sql  up.sql
core-service/migrations/2026-01-27-000005-drop-legacy-modules-tables/: down.sql  up.sql
core-service/migrations/2026-01-28-000001-optimize-filter-rules/: down.sql  up.sql
core-service/migrations/2026-01-28-000002-filter-rules-target-type/: down.sql  up.sql
core-service/migrations/2026-01-29-000001-anime-links-unique-with-hash/: down.sql  up.sql
core-service/migrations/2026-01-30-000001-raw-anime-items/: down.sql  up.sql
core-service/migrations/2026-02-06-000001-auto-download-dispatch/: down.sql  up.sql
core-service/migrations/2026-02-08-000001-viewer-sync-tracking/: down.sql  up.sql
core-service/migrations/2026-02-08-000002-default-catchall-parser/: down.sql  up.sql
core-service/migrations/2026-02-12-000001-parser-created-from/: down.sql  up.sql
core-service/migrations/2026-02-14-000001-add-subscription-target-type/: down.sql  up.sql
core-service/migrations/2026-02-14-000002-anime-link-conflicts/: down.sql  up.sql
core-service/migrations/2026-02-15-000001-cascade-delete-subscription/: down.sql  up.sql
core-service/migrations/2026-02-17-000000-initial-schema/: down.sql  up.sql
core-service/migrations/2026-02-24-000000-add-cover-images/: down.sql  up.sql
core-service/migrations/2026-02-25-000000-rename-anime-to-animework/: down.sql  up.sql
core-service/migrations/2026-02-26-000000-add-download-file-fields/: down.sql  up.sql
core-service/migrations/2026-03-01-000000-add-title-search-index/: down.sql  up.sql
core-service/migrations/2026-03-02-000000-subscription-preferred-downloader/: down.sql  up.sql
core-service/migrations/2026-03-03-000000-add-episode-end-to-parsers/: down.sql  up.sql
core-service/migrations/2026-03-04-000000-add-ai-tables/: down.sql  up.sql
core-service/migrations/2026-03-04-000001-add-pending-result-id/: down.sql  up.sql
core-service/migrations/2026-03-04-000002-remove-catchall-parser/: down.sql  up.sql
core-service/migrations/2026-03-05-062026-0000_pending-ai-subscription-id/: down.sql  up.sql
core-service/migrations/2026-03-07-041834-0000_add-confirm-level-to-pending-ai-results/: down.sql  up.sql
core-service/migrations/2026-03-10-000000-add-ai-settings-advanced/: down.sql  up.sql
core-service/migrations/2026-03-13-000000-add-webhooks/: up.sql
core-service/migrations/2026-04-30-000000-multi-ai-providers/: down.sql  up.sql
core-service/migrations/2026-07-15-000000-add-batch-match-statuses/: down.sql  up.sql
core-service/src/: config.rs  cors.rs  dto.rs  lib.rs  main.rs  openapi.rs  schema.rs  serde_utils.rs  state.rs
core-service/src/ai/: chain.rs  client.rs  factory.rs  filter_generator.rs  mod.rs  openai.rs  parser_generator.rs  prompts.rs
core-service/src/db/: mod.rs  models.rs
core-service/src/handlers/: ai_providers.rs  ai_settings.rs  anime.rs  anime_link_conflicts.rs  conflict_resolution.rs  covers.rs  dashboard.rs  detail.rs  downloads.rs  fetcher_results.rs  filters.rs  links.rs  mod.rs  parsers.rs  pending_ai_results.rs  raw_items.rs  raw_items_filter_status_test.rs  search.rs  services.rs  subscriptions.rs  sync.rs  webhooks.rs
core-service/src/models/: db.rs  mod.rs
core-service/src/services/: conflict_detection.rs  download_cancel.rs  download_dispatch.rs  download_scheduler.rs  download_type_detector.rs  filter.rs  filter_recalc.rs  mod.rs  registry.rs  reparse.rs  scheduler.rs  subscription_broker.rs  sync_service.rs  title_parser.rs  webhook_service.rs
core-service/tests/: anime_api_tests.rs  integration_test_subscriptions.rs  title_parser_test.rs
downloaders/pikpak/: Cargo.toml  Dockerfile
downloaders/pikpak/src/: db.rs  handlers.rs  lib.rs  main.rs  (+3 more)
fetchers/mikanani/: Cargo.toml  README.md
metadata/: Cargo.toml
metadata/src/: bangumi_client.rs  handlers.rs  main.rs  models.rs
shared/: Cargo.toml
shared/assets/: language_codes.json
shared/src/: api.rs  downloader_trait.rs  errors.rs  file_classifier.rs  lib.rs  models.rs  retry.rs
viewers/jellyfin/: Cargo.toml  README.md
(+295 files in other folders)
