[workspace]
members = [
    "shared",
    "core-service",
    "fetchers/mikanani",
    "downloaders/qbittorrent",
    "viewers/jellyfin",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Claude Code"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
sqlx-cli = "0.7"
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.1"

# UUID and time
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenv = "0.15"
config = "0.14"

# CLI
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
mockall = "0.12"

# Regex
regex = "1.10"

# HTTP client
hyper = "1.1"

# Cron
tokio-cron-scheduler = "0.9"

# Additional utils
futures = "0.3"
strum = { version = "0.26", features = ["derive"] }
