[package]
name = "bangumi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }

tokio.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
