[package]
name = "bangumi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bangumi"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

tokio.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true

chrono.workspace = true
uuid.workspace = true

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

dotenv.workspace = true

anyhow.workspace = true
thiserror.workspace = true

tabled = "0.15"
colored = "2.1"

[dev-dependencies]
