[package]
name = "core-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

uuid.workspace = true
chrono.workspace = true

diesel.workspace = true
diesel_migrations.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

dotenv.workspace = true
config.workspace = true

anyhow.workspace = true
thiserror.workspace = true

reqwest.workspace = true
futures.workspace = true
tokio-cron-scheduler.workspace = true
regex.workspace = true
sha2 = "0.10"

[dev-dependencies]
mockall.workspace = true
