[package]
name = "metadata-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "metadata-service"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2"
