[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
strum.workspace = true

[dev-dependencies]
