[package]
name = "downloader-pikpak"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "downloader-pikpak"
path = "src/main.rs"

[lib]
name = "downloader_pikpak"
path = "src/lib.rs"

[dependencies]
shared = { path = "../../shared" }

tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true

sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
