[package]
name = "downloader-pikpak"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "downloader-pikpak"
path = "src/main.rs"

[lib]
name = "downloader_pikpak"
path = "src/lib.rs"

[dependencies]
shared = { path = "../../shared" }

tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true

rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
