[package]
name = "fetcher-mikanani"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../../shared" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

uuid.workspace = true
chrono.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
thiserror.workspace = true

reqwest.workspace = true

# RSS 解析
rss = "2.0"
feed-rs = "2.3"
sha2 = "0.10"
url = "2.5"
regex = "1.10"

[dev-dependencies]
